--- a/README
+++ b/README
@@ -9,3 +9,13 @@ Untracked Changes --> Tracked Changes --> "officially" changed
  					3) git push
 
 
+Hex Code: 
+Blue:#49BEAC
+Black:#2D2824
+Grey:#ECE8E7
+
+Fonts: 
+Futura
+Open Sans (Google Font) 
+Dawning of a New Day (Google Font)
+
